--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,12 +41,15 @@
       "last 1 safari version"
     ]
   },
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es6",
-        "baseUrl": "src"
-      },
-      "exclude": ["node_modules"],
-      "include": ["src"]
-  
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es6",
+    "baseUrl": "src"
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src"
+  ]
 }
