--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.4",
     "react-bootstrap": "^2.8.0",
