--- a/client-app/package.json
+++ b/client-app/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/joy": "^5.0.0-beta.7",
     "@mui/material": "^5.14.10",
     "@mui/x-date-pickers": "^6.14.0",
     "@testing-library/jest-dom": "^5.17.0",
