--- a/client-app/package.json
+++ b/client-app/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "jspdf": "^2.5.1",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.4",
