--- a/API/inzRafalRutowski/inzRafalRutowski/inzRafalRutowski.csproj
+++ b/API/inzRafalRutowski/inzRafalRutowski/inzRafalRutowski.csproj
@@ -28,6 +28,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
