--- a/API/inzRafalRutowski/inzRafalRutowski/appsettings.json
+++ b/API/inzRafalRutowski/inzRafalRutowski/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TokenKey": "here should be strong seciurity token"
 }
