--- a/API/inzRafalRutowski/inzRafalRutowski/appsettings.json
+++ b/API/inzRafalRutowski/inzRafalRutowski/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-4KQC2UV;Initial Catalog=inzRafalRutkowskiData;User Id=sa;password=HasloInzynierka2023@;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=RAF\\INZ2023RR;Initial Catalog=inzRafalRutkowskiData;TrustServerCertificate=true;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
